# redis-simulink

./: .gitignore  REDIS_compile.m  REDIS_custom.cpp  REDIS_custom.h  REDIS_model.slx  REDIS_wrapper.cpp  SFB__sfRedis__SFB.mat  projman.m  redis-simulink.code-workspace  redis_datatypes.m  setup_RMClient.m  sfRedis.c  sfRedis_wrapper.c
actors/: CMakeLists.txt
actors/adder/: CMakeLists.txt  load_data.m  macro.cpp  macro.f90  macro.m  macro.py  micro.cpp  micro.f90  micro.m  micro.py  muscle_matlab_exchange.m  simulink_init.m  test_co_sim.slx  test_co_sim_redis.slx  test_co_sim_redis.slx.autosave  test_co_sim_redis.slxc
actors/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.f90  helloworld.py
bus_sfunction_builder/: BusCreator_TimeSineWave.m  RedisCredentialsDict.asv  SFB__SimpleSfunction__SFB.mat  SFB__sfRedis__SFB.mat  SFTimeSignalDemo  SFTimeSignalDemo.dwarf  SFTimeSignalDemo.mat  SFTimeSignalDemo.slx  SFTimeSignalDemo.slxc  SFTimeSignalDemo_20240812_101712.txt  S_function_Builder.slx  SimpleBus.slx  SimpleSfunction.c  SimpleSfunction.mexmaca64  SimpleSfunction.tlc  SimpleSfunction_wrapper.c  hiredis.h  libhiredis.dylib  readConfigFile.m  redisConnectionType.m  redisCredentials.m  redisCredentialsBusSimulinkParam.m  redis_datatypes.m  rtwmakecfg.m  setup_sfHiredis.m  sfRedis.c  sfRedis.mexmaca64  sfRedisBus.h  sfRedisBus.mat  sfRedisBusConnection.m  sfRedisBusObjectFiles.m  sfRedisBusObjectStore.m  sfRedisBus_SimulinkParameter.m  sfRedisClientDataDictionary.sldd  sfRedisCoderDict.sldd  sfRedisConnectionBus.mat  sfRedisCredentialsBus.m  sfRedisDemux.c  sfRedis_Bus.m  sfRedis_InterrogationLogic.c  (+2 more)
bus_sfunction_builder/REDIS_custom_iterations_not_used/: REDIS_custom.cpp  REDIS_custom.h  REDIS_custom_orig.c
bus_sfunction_builder/S-function Code Parts/: 01_sfPortDefinitions.c  sfCustomMessage.c  sfCustomMessage.h  sfRedisConnect_StartSection.c  sfRedisConnect_TerminateSection.c
bus_sfunction_builder/S-function-examples/: sfuntmpl_doc.c  simomex.c
bus_sfunction_builder/SFTimeSignalDemo_grt_rtw/: SFTimeSignalDemo.c  SFTimeSignalDemo.h  SFTimeSignalDemo.mk  SFTimeSignalDemo_capi.c  SFTimeSignalDemo_capi.h  SFTimeSignalDemo_capi_host.h  SFTimeSignalDemo_data.c  SFTimeSignalDemo_dt.h  SFTimeSignalDemo_private.h  SFTimeSignalDemo_targ_data_map.m  SFTimeSignalDemo_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
bus_sfunction_builder/docs/: README.md
bus_sfunction_builder/reference_src/: REDIS.cpp  REDIS.tlc  REDIS_custom.cpp  REDIS_custom.h  REDIS_matlab.cpp  redis_custom_sketch.md  sfRedis.c  sfcndemo_stspace.slx
bus_sfunction_builder/sfHiredis/: REDIS_compile.m  RMCompileClass.m  RMConnection.h  compile.m  redis_simulink.h
bus_sfunction_builder/sfRedisBus_project/: ex_cc_simpleTypes.h  ex_cc_simpleTypes.h.  ex_cc_struct_alias.h  ex_integer_aliases.h
bus_sfunction_builder/simulink/: ScheduleCore.xml  ScheduleEditor.xml  bddefaults.xml  blockdiagram.xml  configSet0.xml  graphicalInterface.xml  modelDictionary.xml  windowsInfo.xml
doc/: Building-REDIS.md  Setting up VSCode for Matlab Mex Coding.md
docs/Matlab-Stateflow/: C-code-examples.md  Matlab-Coder-Basics.md  Matlab-Stateflow-General.md  S-function-builder.md
hiredis_matlab/: Hiredis_Interface_gen.m  REDIS_compile.m  REDIS_custom.cpp  REDIS_custom.h  SFB__sfRedisConnect__SFB.mat  definehiredis.m  definehiredis_matlab.m  hiredes_matlab.mlx  hiredisData.xml  hiredis_interface_gen.out  hiredis_matlab.code-workspace  hiredis_matlabData.xml  libhiredis.dylib  sfRedisConnect.c  sfRedisConnect_wrapper.c
redis_client/: REDIS_custom.cpp  REDIS_custom.h  REDIS_model.slx  REDIS_wrapper.cpp  readConfigFile.m  redis_datatypes.m
redis_client/docs/: Building-REDIS.md  Deciphering-Build-Command-Interface.md  HIREDIS-API.md  REDIS-key-limitations.md  REDIS_S-block.md  Redis-client-overview.md  Setting up VSCode for Matlab Mex Coding.md  TLC-Docs.md  (+1 more)
sfunc_build_trash/: SFB__redis__SFB.mat  S_function_Builder.slx  redis.c  redis_wrapper.c
tests/: CMakeLists.txt
(+310 files in other folders)
